# wgpu-workgroup-memory-bug

./: .gitignore  Cargo.toml  README.md  bug_report.md  run_test.sh  setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
shader/: Cargo.toml
shader/src/: lib.rs
src/: main.rs  shader.wgsl
