[package]
name = "wgpu-workgroup-memory-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "trunk", features = [
    "spirv",
    "vulkan-portability",
    "static-dxc"
] }
naga = { git = "https://github.com/gfx-rs/wgpu", branch = "trunk", features = [
    "spv-in",
    "hlsl-out",
    "wgsl-out"
] }
bytemuck = "1.14"
pollster = "0.3"
env_logger = "0.11"
